# lab-wazero-go-rust

./: .gitpod.yml  README.md
.devcontainer/: devcontainer.json
01-wasi-simple-function/: go.mod  main.go
02-wasi-print-string/: go.mod  main.go
02-wasi-print-string/functions/: README.md
02-wasi-print-string/functions/hey/src/: main.rs
03-wasi-string-param/: go.mod  main.go
03-wasi-string-param/functions/hey/src/: main.rs
04-wasi-string-param-return-string/: go.mod  main.go
04-wasi-string-param-return-string/functions/hey/: Cargo.toml  build.sh
04-wasi-string-param-return-string/functions/hey/src/: main.rs
05-use-host-function-helpers/: go.mod  main.go
05-use-host-function-helpers/functions/hey/: Cargo.toml
05-use-host-function-helpers/functions/hey/src/: main.rs
docker/: .env
pre_hf/: Cargo.toml  README.md
pre_hf/src/: lib.rs
