[package]
name = "pre_hf"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "This package is for learning and it is subject to change"
homepage = "https://github.com/wasm-university/lab-wazero-go-rust"
documentation = "https://github.com/wasm-university/lab-wazero-go-rust"
repository = "https://github.com/wasm-university/lab-wazero-go-rust"
readme = "README.md"


[dependencies]
# wee_aloc is a WebAssembly optimized allocator, which is needed to use non-numeric types like strings.
# See https://docs.rs/wee_alloc/latest/wee_alloc/
wee_alloc = "0.4.5"

